--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,13 +8,13 @@
 
     <ImageView
         android:id="@+id/rosario"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:contentDescription="TODO"
         android:scaleType="fitXY"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/rosario"
-        android:contentDescription="TODO" />
+        app:srcCompat="@drawable/rosario" />
     <!--<ImageView
         android:id="@+id/prueba"
         android:layout_width="wrap_content"
